main.css
body {
    background-color: #000;
    color: #FFF;
    text-align: center;
}

#info {
    padding-top: 10px;
}

#container {
    display: -webkit-box;
    /* Safari */
    display: -ms-flexbox;
    /* IE 10 */
    display: flex;
    -webkit-box-pack: center;
    /* Safari */
    -ms-flex-pack: center;
    /* IE 10 */
    justify-content: center;
    margin: auto;
    border: 1px solid red;
}

#textContainer {
    display: -webkit-box;
    /* Safari */
    display: -ms-flexbox;
    /* IE 10 */
    display: flex;
    -webkit-box-orient: vertical;
    /* Safari */
    -webkit-box-direction: normal;
    /* Safari */
    -ms-flex-direction: column;
    /* IE 10 */
    flex-direction: column;
    width: 30vh;
    height: 500px;
    margin: auto;
    gap: 10px;
    border: 1px solid blue;
}

#gridContainer {
    /* IE 10 */
    display: -ms-grid;
    display: grid;
    height: 500px;
    width: 70%;
    margin: auto;
    background-color: #fff;
    border: 1px solid green;
}

.button {
    padding: 20px;
    background-color: #35d760;
    border: none;
    color: #fff;
    font-weight: 700;
    font-size: 15px;
    outline: none;
}

.button:hover {
    cursor: pointer;
    background-color: #1e883e;
}

@media screen and (max-width: 1000px) {
    #gridContainer {
        width: 60%;
    }
}

@media screen and (max-width: 800px) {
    #container {
        -webkit-box-orient: vertical;
        /* Safari */
        -webkit-box-direction: normal;
        /* Safari */
        -ms-flex-direction: column;
        /* IE 10 */
        flex-direction: column;
    }

    #gridContainer {
        width: 90%;
    }

    #textContainer {
        height: 150px;
        width: 90%;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        padding-bottom: 15px;
    }

    .button {
        padding: 8px 16px;
    }
}

@media screen and (max-width: 380px) {
    .button {
        padding: 8px;
    }
}

